--- a/00. Read, Write, Show Image .ipynb
+++ b/00. Read, Write, Show Image .ipynb
@@ -64,6 +64,27 @@
    },
    "outputs": [],
    "source": [
+    "#OverLaying Images\n",
+    "\n",
+    "im1 = cv2.imread(\"im1.jpg\")\n",
+    "im2 = cv2.imread(\"im2.jpg\")\n",
+    "\n",
+    "im = cv2.bitwise_or(im1,im2,None)\n",
+    "cv2.imshow(\"Image\",im)\n",
+    "\n",
+    "key = cv2.waitKey(0)\n",
+    "im.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "##C/C++\n",
     "\n",
     "\n",
